# fit-framework

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pom-deploy.xml  pom.xml
.agent/: README.md
.claude/: README.md  project-rules.md
framework/fit/python/: .gitignore  README.md  pyproject.toml  requirements.txt
framework/fit/python/bootstrap/fit_py_service_db/: service_db.py
framework/fit/python/conf/: application.yml  fit.yml
framework/fit/python/fit_cli/: main.py  readme-pypi.md  readme.md
framework/fit/python/fit_cli/commands/: build_cmd.py  init_cmd.py  package_cmd.py
framework/fit/python/fit_cli/utils/: build.py
framework/fit/python/fit_common_struct/: core.py  entity.py
framework/fit/python/fit_py_nacos_registry/: README.md
framework/fit/python/fit_py_nacos_registry/conf/: application.yml
framework/fit/python/fit_py_nacos_registry/heartbeat/: heartbeat_service.py
framework/fit/python/fit_py_nacos_registry/service/: __init__.py  async_executor.py  parsers.py  utils.py
framework/fit/python/fitframework/: __init__.py  const.py
framework/fit/python/fitframework/api/: enums.py
framework/fit/python/fitframework/utils/: cbor_serialize_utils.py  json_serialize_utils.py  restart_policy.py  scheduler.py  tools.py
framework/fit/python/plugin/fit_py_heart_beat_agent/: heart_beat_agent.py  heart_beat_utils.py
framework/fit/python/plugin/fit_py_http_client/: http_client_utils.py
framework/fit/python/plugin/fit_py_registry_client/: fitable_address_service.py  fitable_meta_service.py  online_fitable_service.py  registry_address_service.py
(+1613 files in other folders)
